# TandFManagement

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildall.py  buildall.sh  runalltests.sh
cmake/Modules/: FindCXX11.cmake
core/: CMakeLists.txt
core/gui/: CMakeLists.txt
core/gui/include/: aboutdialog.h  competitionpage.h  mainwindow.h  menubar.h  startupscreen.h
core/gui/resources/: resources.qrc
core/gui/src/: aboutdialog.cpp  competitionpage.cpp  main.cpp  mainwindow.cpp  menubar.cpp
core/include/: competitionmanager.h
core/tests/: CMakeLists.txt
core/tests/src/: competition_tests.cpp
core/tfm/: CMakeLists.txt
core/tfm/include/: competitionmanager.h  event.h  eventgroup.h
core/tfm/src/: competitionmanager.cpp  eventgroup.cpp
core/tfm/tests/: CMakeLists.txt
core/tfm/tests/include/: testdoubles.h
core/tfm/tests/src/: competition_tests.cpp  testdoubles.h
